fixed latex again

--- a/Project 1 - Spam Classifier project-20241021/Spam_project_subject_2024.ipynb
+++ b/Project 1 - Spam Classifier project-20241021/Spam_project_subject_2024.ipynb
@@ -85,10 +85,12 @@
     "\\mathbb{P}(x^{(i)} \\mid y = h) = \\theta_{i,h}^{x^{(i)}} \\cdot (1-\\theta_{i,h})^{1-x^{(i)}}\n",
     "$$\n",
     "As we will use a naive Bayes classifier, the occurences of the different words are independent from each other.\n",
+    "$$\n",
     "\\begin{align}\n",
     "\\mathbb{P}(\\mathbf{x} \\mid y = s) & = \\prod_{i=1}^{d} \\mathbb{P} (x^{(i)} \\mid y = s)\\\\\n",
-    "  & =  \\prod_{i=1}^{d} \\theta_{i,s}^{x^{(i)}} \\cdot (1-\\theta_{i,s})^{1-x^{(i)}}\n",
-    "\\end{align}\n"
+    "  & =  \\prod_{i=1}^{d} \\theta_{i,s}^{x^{(i)}} \\cdot (1-\\theta_{i,s})^{1-x^{(i)}} \n",
+    "\\end{align}\n",
+    "$$\n"
    ]
   },
   {
