--- a/Project 4 - Monopoly/Monopoly.ipynb
+++ b/Project 4 - Monopoly/Monopoly.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -578,17 +578,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Converged after 44 throws!\n"
+     ]
+    }
+   ],
    "source": [
     "# Your code here\n",
     "\n",
     "for t in range(100):\n",
     "    if(np.linalg.norm(np.linalg.matrix_power(A, t+1) - stationary) < 0.01): # using norm for difference! might be different on your end\n",
     "        print(\"Converged after \" + str(t) + \" throws!\")\n",
-    "        break\n",
-    "\n"
+    "        break"
    ]
   },
   {
@@ -618,15 +625,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# read monopoly square data in Monopoly_square_data.csv\n",
+    "import pandas as pd\n",
+    "data = pd.read_csv(\"./Data/Monopoly_squares_data.csv\") # 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Compute i_k_h\n",
+    "ikh = np.tile(0.0, (40, 6)) # 2\n",
+    "rows = [\"RENT_empty_property\",\"RENT_1house\",\"RENT_2houses\",\"RENT_3houses\",\"RENT_4houses\",\"RENT_hotel\"]\n",
+    "for i in range(0, 40):\n",
+    "    ikh[i] = stationary[i] * np.array([data[x][i] for x in rows])\n",
+    "ikh\n",
+    "# Compute e_k_h\n",
+    "ekh = np.tile(0.0, (40, 6)) # 3\n",
+    "for i in range(0, 40):\n",
+    "    ekh[i] = (data[\"Cost\"][i] + np.array(range(6)) * data[\"house_cost\"][i]) / ikh[i]\n",
+    "# ekh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Color Brown has average RoIs [992.99596697 364.09852122 176.53261635  77.23301965  53.78728154\n",
+      "  42.54433876]\n",
+      "Color Light Blue has average RoIs [719.20131865 212.05261559  98.85973315  40.94437015  32.89962756\n",
+      "  28.11208441]\n",
+      "Color Pink has average RoIs [582.20435496 196.39557833  92.11676189  40.51031884  35.62146094\n",
+      "  34.41429384]\n",
+      "Color Orange has average RoIs [479.64372392 147.47905114  70.51614604  32.36744106  28.82643589\n",
+      "  26.75435785]\n",
+      "Color Red has average RoIs [467.18875993 155.40366047  76.41386276  36.33421602  35.66863848\n",
+      "  35.22261883]\n",
+      "Color Yellow has average RoIs [447.31609454 139.85406282  63.41496891  33.37177882  33.23028719\n",
+      "  33.13181197]\n",
+      "Color Green has average RoIs [456.70511468 147.47790694  68.57635717  38.60325517  38.78825472\n",
+      "  39.42703032]\n",
+      "Color Dark Blue has average RoIs [413.71544656 150.67508863  71.09179436  40.65786713  41.46262347\n",
+      "  42.05277812]\n"
+     ]
+    }
+   ],
+   "source": [
+    "colors = [\"Brown\", \"Light Blue\", \"Pink\", \"Orange\", \"Red\", \"Yellow\", \"Green\", \"Dark Blue\"]\n",
+    "cdict = {c: [] for c in colors}\n",
     "\n",
-    "# Compute i_k_h \n",
-    "\n",
-    "# Compute e_k_h"
+    "for i in range(0, 40):\n",
+    "    for c in colors:\n",
+    "        if data[\"Slot\"][i].startswith(c):\n",
+    "            cdict[c].append(ekh[i])\n",
+    "for c in cdict:\n",
+    "    avg = [0] * 6\n",
+    "    for arr in cdict[c]:\n",
+    "        avg += arr\n",
+    "    avg /= len(cdict[c])\n",
+    "    print(\"Color \" + c + \" has average RoIs \" + str(avg)) # 4\n",
+    "# 5: it appears the return of investment for 3+ houses beats other colors on orange, so i can indeed second this"
    ]
   },
   {
@@ -653,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
