minor proj 5 fix

--- a/Project 5 - Text Decoding/MCMC_project.ipynb
+++ b/Project 5 - Text Decoding/MCMC_project.ipynb
@@ -533,11 +533,11 @@
     "        decode_t = decrypt(mess, tau_t)\n",
     "        loglike_t = logLikelihood(decode_t, mu, A, c2i)\n",
     "        if np.log(np.random.rand()) < (loglike_t - loglike):\n",
-    "            if loglike_t > loglike:\n",
+    "            if loglike_t > best_loglike:\n",
     "                best_msg, best_loglike = decode_t, loglike_t\n",
     "                # print(f\"Iteration {i}, loglikelihood {loglike:.4f} to {loglike_t:.4f}, message is now {best_msg}\")\n",
     "            tau, decode, loglike = tau_t, decode_t, loglike_t\n",
-    "    print(f\"loglikelihood {loglike_t:.4f}, message is {best_msg}\")\n",
+    "    print(f\"loglikelihood {best_loglike:.4f}, message is {best_msg}\")\n",
     "    return best_msg"
    ]
   },
