proj 7 part 3 done

--- a/Project 7 - Regression Analysis/Project_regression_analysis.ipynb
+++ b/Project 7 - Regression Analysis/Project_regression_analysis.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 109,
    "id": "e1bb39b0",
    "metadata": {
     "scrolled": true
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 110,
    "id": "445d04a2",
    "metadata": {},
    "outputs": [
@@ -713,7 +713,7 @@
        "[20 rows x 22 columns]"
       ]
      },
-     "execution_count": 161,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -738,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 111,
    "id": "99432ca7",
    "metadata": {},
    "outputs": [
@@ -754,7 +754,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 112,
    "id": "25581580",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 113,
    "id": "94cff319",
    "metadata": {},
    "outputs": [
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 114,
    "id": "efd70fba",
    "metadata": {},
    "outputs": [],
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 115,
    "id": "76ec51e7",
    "metadata": {},
    "outputs": [
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 116,
    "id": "9473ce97",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 117,
    "id": "411e94bf",
    "metadata": {},
    "outputs": [],
@@ -1180,17 +1180,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 118,
    "id": "ac18f133",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1ba6dc69180>"
+       "<seaborn.axisgrid.PairGrid at 0x13076ca3f40>"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1236,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 119,
    "id": "cbef9268",
    "metadata": {},
    "outputs": [
@@ -1296,7 +1296,7 @@
        "BMI        0.318070   0.508105  1.000000"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1311,7 +1311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 120,
    "id": "06d47b43",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 121,
    "id": "0eb43603",
    "metadata": {},
    "outputs": [],
@@ -1456,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 122,
    "id": "27a710c1",
    "metadata": {},
    "outputs": [
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 142,
    "id": "387d1194",
    "metadata": {},
    "outputs": [
@@ -1532,7 +1532,7 @@
    "source": [
     "## Your code here\n",
     "train_data = data[data['Year'] <= 2006]\n",
-    "test_data = data[(data['Year'] >= 2007) & (data['Year'] <= 2009) ]\n",
+    "test_data = data[(data['Year'] >= 2007) & (data['Year'] <= 2009)]\n",
     "\n",
     "print(f\"Training set size: {train_data.shape}\")\n",
     "print(f\"Testing set size: {test_data.shape}\")"
@@ -1578,17 +1578,17 @@
      "output_type": "stream",
      "text": [
       "Set A\n",
-      "    [(72.93711677701016, 'bias'), (-0.04625177478553836, 'Adult Mortality'), (-0.009713728578183959, 'infant deaths'), (0.5342761668883126, 'Total expenditure')]\n",
-      "    {'MSE': 40.06463073796029, 'rsquared': 0.5323358566800671}\n",
+      "    {'bias': 73.08854718397318, 'Adult Mortality': -33.393781395158726, 'infant deaths': -17.48471144073131, 'Total expenditure': 9.205578355485951}\n",
+      "    {'MSE': 40.06463073796039, 'rsquared': 0.532335856680066}\n",
       "Set B\n",
-      "    [(45.3006642564585, 'bias'), (0.059090228911436525, 'Alcohol'), (0.17017905162103478, 'BMI'), (1.3982657107869778, 'Schooling')]\n",
-      "    {'MSE': 37.24773348771303, 'rsquared': 0.5652167747140625}\n",
+      "    {'bias': 45.47143421036869, 'Alcohol': 1.0553514883583142, 'BMI': 14.686452154895694, 'Schooling': 28.944100213289904}\n",
+      "    {'MSE': 37.24773348771327, 'rsquared': 0.5652167747140597}\n",
       "Set C\n",
-      "    [(53.999527596594376, 'bias'), (0.0002159327988857866, 'GDP'), (21.295621898054016, 'Income composition of resources'), (-2.0655988334221053e-09, 'Population')]\n",
-      "    {'MSE': 42.84623944442279, 'rsquared': 0.49986685275320664}\n",
+      "    {'bias': 53.999890584975454, 'GDP': 25.73294062915544, 'Income composition of resources': 20.188249559355263, 'Population': -2.6725941780684868}\n",
+      "    {'MSE': 42.846239444422665, 'rsquared': 0.4998668527532081}\n",
       "Set D\n",
-      "    [(56.3768097932594, 'bias'), (-0.02996568753265041, 'Adult Mortality'), (-0.004148145613945725, 'infant deaths'), (0.018839995278586937, 'Total expenditure'), (0.023478493671236517, 'Alcohol'), (0.10398496336651687, 'BMI'), (0.8160813640560842, 'Schooling'), (9.111773139681899e-05, 'GDP'), (4.73125727312702, 'Income composition of resources'), (5.351133854723852e-09, 'Population')]\n",
-      "    {'MSE': 22.017541543214644, 'rsquared': 0.7429948931474235}\n"
+      "    {'bias': 56.45818803502013, 'Adult Mortality': -21.635226398574286, 'infant deaths': -7.4666621051027215, 'Total expenditure': 0.32461311864916637, 'Alcohol': 0.4193258969694588, 'BMI': 8.97390233853062, 'Schooling': 16.89288423595909, 'GDP': 10.858596676357024, 'Income composition of resources': 4.485231894924904, 'Population': 6.923614089433919}\n",
+      "    {'MSE': 22.017541543214616, 'rsquared': 0.7429948931474237}\n"
      ]
     }
    ],
@@ -1598,20 +1598,51 @@
     "predictors_sets = {\n",
     "    \"Set A\": [\"Adult Mortality\", \"infant deaths\", \"Total expenditure\"],\n",
     "    \"Set B\": [\"Alcohol\", \"BMI\", \"Schooling\"],\n",
-    "    \"Set C\": [\"GDP\", \"Income composition of resources\", \"Population\"]\n",
+    "    \"Set C\": [\"GDP\", \"Income composition of resources\", \"Population\"],\n",
     "}\n",
     "\n",
     "predictors_sets[\"Set D\"] = [x for l_var in predictors_sets.values() for x in l_var]\n",
-    "\n",
+    " \n",
     "## Running the models\n",
     "## Your code here\n",
     "# i imagine we are trying to predict life expectancy!\n",
     "for key, pred in predictors_sets.items():\n",
     "    print(key)\n",
     "    model = LinRegModel()\n",
-    "    model.fit(train_data[pred], train_data[\"Life expectancy\"])\n",
+    "    # min-max normalize, so that variables are comparable. might cause slight inaccuracy but thats acceptable\n",
+    "    normed_train_data = (train_data[pred] - data[pred].min(0)) / (data[pred].max(0) - data[pred].min(0))\n",
+    "    normed_test_data = (test_data[pred] - data[pred].min(0)) / (data[pred].max(0) - data[pred].min(0))\n",
+    "    model.fit(normed_train_data, train_data[\"Life expectancy\"])\n",
     "    print(\"   \", {y:x for x,y in zip(model.coefficients, [\"bias\"]+pred)})\n",
-    "    print(\"   \", model.evaluate(test_data[pred], test_data[\"Life expectancy\"]))"
+    "    print(\"   \", model.evaluate(normed_test_data, test_data[\"Life expectancy\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26fc0e12",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    {'bias': 56.307314755626116, 'Adult Mortality': -7.6537874040860014, 'infant deaths': 1.3311407027686215, 'Total expenditure': -10.681626588432229, 'Alcohol': -10.617364969384862, 'BMI': 13.108802982582741, 'Schooling': 7.685544055706152, 'GDP': -16.1768878686059, 'Income composition of resources': 1.7485660034168937, 'Population': 5.891335707054416}\n",
+      "    {'MSE': 22.0497571081644, 'rsquared': 0.042596995841898466}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# only low lifespan\n",
+    "train_data2 = data[(data['Year'] <= 2006) & (data[\"Life expectancy\"] < 65)]\n",
+    "test_data2 = data[(data['Year'] >= 2007) & (data['Year'] <= 2009) & (data[\"Life expectancy\"] < 65)]\n",
+    "\n",
+    "pred = predictors_sets[\"Set D\"]\n",
+    "normed_train_data = (train_data2[pred] - data[pred].min(0)) / (data[pred].max(0) - data[pred].min(0))\n",
+    "normed_test_data = (test_data2[pred] - data[pred].min(0)) / (data[pred].max(0) - data[pred].min(0))\n",
+    "model.fit(normed_train_data, train_data2[\"Life expectancy\"])\n",
+    "print({y:x for x,y in zip(model.coefficients, [\"bias\"]+pred)})\n",
+    "print(model.evaluate(normed_test_data, test_data2[\"Life expectancy\"]))"
    ]
   },
   {
@@ -1625,9 +1656,9 @@
     "\n",
     "  1. Identify which predictor set yielded the best performance.\n",
     "  2.  Answer the following questions:\n",
-    "  - What are the most significant predictors based on this analysis?\n",
-    "  - How does the inclusion or exclusion of certain variables affect model performance?\n",
-    "  - For countries with low life expectancy (<65), based on the coefficients estimated for each variable prediction, comment the effect of their change on lifespan?\n"
+    "  - (a) What are the most significant predictors based on this analysis?\n",
+    "  - (b) How does the inclusion or exclusion of certain variables affect model performance?\n",
+    "  - (c) For countries with low life expectancy (<65), based on the coefficients estimated for each variable prediction, comment the effect of their change on lifespan?\n"
    ]
   },
   {
@@ -1635,7 +1666,13 @@
    "id": "598b57d2",
    "metadata": {},
    "source": [
-    "_your answers here_"
+    "1:    \n",
+    "Predictor set (D) yields the best performance, given the minimum MSE and maximum rsquared by far    \n",
+    "\n",
+    "2:         \n",
+    "(a) the most significant predictors are Adult Mortality(-21), Schooling(17), GDP(11), BMI(9) and Infant Deaths(-7). Adult and Infant Mortality together surprisingly aren't fully explanatory (see set A)    \n",
+    "(b) inclusion of more variables universally increases performance at the cost of training and runtime. Even, say, total expenditure which has an effect of ~0.3 even given min-max normalization to (0,1) ends up improving the MSE of Set D from 22.027 to 22.017... of course at diminishing returns, but linear cost increases.    \n",
+    "(c) coefficients for countries with low life expectancy behave completely differently, implying qualitative differences a linear regression model cannot capture. For example, alcohol and total expenditure are now significant factors (~-10) while being insignificant (~0.4) before."
    ]
   },
   {
@@ -1666,7 +1703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 126,
    "id": "511f9ace",
    "metadata": {},
    "outputs": [],
@@ -1698,7 +1735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 127,
    "id": "c7d2dcc7",
    "metadata": {},
    "outputs": [],
@@ -1750,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 128,
    "id": "a52cdf13",
    "metadata": {},
    "outputs": [],
@@ -1776,7 +1813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 129,
    "id": "a9d7158b",
    "metadata": {},
    "outputs": [],
@@ -1817,7 +1854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 130,
    "id": "6ed8d461",
    "metadata": {},
    "outputs": [],
